apparently the last two fixes, depth and mobile operation completely break the game, i quit for the day

--- a/dev/sass/main.scss
+++ b/dev/sass/main.scss
@@ -41,7 +41,6 @@ header {
 	border-bottom: 4px solid #fb7116;
 	padding: 0;
 	position: relative;
-	overflow: hidden;
 	
 	&.touch-to-play{
 		
@@ -78,6 +77,17 @@ footer {
 	ul{
 		li{
 			display: inline-block;
+		}
+	}
+}
+
+@media (max-width: 600px) {
+
+	#game2 {
+		height: 367px;
+		#gameCanvas{
+			position: absolute;
+			right: 0;
 		}
 	}
 }
